<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/counter_tv_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/chewy"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:layout_marginTop="76dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/question_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_question"
            android:textAlignment="center"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/true_button_id"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:text="@string/text_true"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/back_button_id"
        app:layout_constraintTop_toBottomOf="@+id/cardView_id" />

    <ImageButton
        android:id="@+id/back_button_id"
        android:layout_width="63dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_id"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/next_button_id"
        android:layout_width="52dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_id"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <Button
        android:id="@+id/false_button_id"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:text="@string/text_false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/next_button_id"
        app:layout_constraintTop_toBottomOf="@+id/cardView_id" />

    <TextView
        android:id="@+id/question_counter_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/chewy"
        android:text="@string/question_counter"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>